# ascend-docker-runtime

./: OWNERS  README.md
ci/: dependency.xml
cli/: .gitignore  README.txt
cli/src/: CMakeLists.txt  basic.c  basic.h  cgrp.c  cgrp.h  logger.c  logger.h  logging.c  logging.h  main.c  mount.c  mount.h  ns.c  ns.h  options.c  options.h  u_mount.c  u_mount.h  utils.c  utils.h
cli/src/HuaweiSecureC/: CMakeLists.txt
cli/test/: CMakeLists.txt
cli/test/dt/: CMakeLists.txt  README.md  build.sh
cli/test/dt/Depend/: CMakeLists.txt  public_stub.cpp  ut_comm.h  ut_main.cpp
cli/test/dt/Depend/HuaweiSecureC/: CMakeLists.txt
cli/test/dt/Depend/libboundscheck/: CMakeLists.txt
cli/test/dt/Depend/mockcpp/: README
cli/test/dt/Scripts/: pre.sh
cli/test/dt/cmake/: internal_utils.cmake
cli/test/dt/srclib/: CMakeLists.txt
cli/test/dt/testcase/: gtest_mytest.cpp  gtest_mytestcase.cpp  main.cpp
cli/test/dt_go/: build.sh
cli/test/include/gtest/: UdpSocket.h  gtest-test-part.h  gtest.h  gtest_pred_impl.h
cli/test/include/gtest/internal/: gtest-internal.h  gtest-param-util.h  gtest-port.h
cli/test/include/mockcpp/: AfterMatchBuilder.tcc  ApiHook.h  ApiHookFunctor.h  ApiHookGenerator.h  ApiHookHolderFactory.h  ApiHookMocker.h  ArgumentsList.h  ArgumentsMacroHelpers.h  BeforeMatchBuilder.h  BeforeMatchBuilder.tcc  CallerMatchBuilder.h  CallerMatchBuilder.tcc  CallerMatcher.h  ChainableMockMethod.h  ChainableMockMethodContainer.h  ChainableMockMethodCore.h  CodeModifier.h  DefaultBuilder.h  DefaultMethodAddrGetterDef.h  DelegatedMethod.h  DelegatedMethodGetByVptrDef.h  DelegatedMethodGetDef.h  DestructorAddrGetterDef.h  GlobalMockObject.h  HookMockObject.h  Invocation.h  InvocationMockBuilder.h  InvocationMockBuilder.tcc  InvocationMockBuilderGetter.h  Invokable.h  IsMirror.h  JmpCode.h  MethodIndiceCheckerDef.h  MockBuilder.h  MockObject.h  MsvcMethodInfoReader.h  MsvcRtti.h  OutputStringStream.h  ParameterizedApiHookHolder.h  ProcStub.h  (+4 more)
cli/test/include/mockcpp/types/: PlaceHolder.h  ValueHolder.h
cli/test/testcase/: CMakeCache.txt  Makefile  gtest_mytestcase.cpp  main.cpp
destroy/src/: CMakeLists.txt  main.c
hook/: .gitignore  glide.yaml  go.mod  go.sum  main.go  main_test.go
install/deb/scripts/: control  postinst  prerm
install/deb/src/: CMakeLists.txt  go.mod  go.sum  install  main.c  main.go  main_test.go
install/deb/src/HuaweiSecureC/: CMakeLists.txt
install/deb/src/cjson/: CMakeLists.txt
install/rpm/: ascend-docker-plgugin.spec
mindxcheckutils/: go.mod  mindxcheckutils.go  mindxcheckutils_test.go
opensource/: README.MD
output/: README.MD
platform/: README.MD
runtime/: .gitignore  config.json  glide.yaml  go.mod  go.sum  main.go  main_test.go
runtime/dcmi/: dcmi.go  dcmi_api.go  dcmi_api_test.go  dcmi_interface_api.h
